# kingfisher-colab

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  component_errors_kingfisher.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  pypi.yml
docs/: changelog.rst  conf.py  functions.rst  index.rst
kingfishercolab/: __init__.py
ocdskingfishercolab/: __init__.py  charts.py  display.py  download.py  exceptions.py  google.py  kingfisher.py  red_flags.py  registry.py  sql.py  usability.py
ocdskingfishercolab/indicators/: indicators.json  indicators.py  indicators.schema.json
tests/: conftest.py  test_methods.py  test_module.py
tests/fixtures/: flattened.xlsx  release_package.json
