[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocdskingfishercolab"
version = "0.6.0"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "A set of utility functions for Google Colab notebooks using OCDS data"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/kingfisher-colab"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "babel",
    "flattentool",
    "google-auth",
    "gspread",
    "gspread-dataframe",
    "httplib2",
    "ipython",
    "ipython-sql",
    "jupyter_server",
    "matplotlib",
    "oauth2client",
    "prettytable<3.12",
    "pydrive2",
    "requests",
    "seaborn",
    "sqlalchemy",
]

[project.optional-dependencies]
test = [
    "pandas",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D104", "D205",
    "PD901",  # pandas
    "PLR2004",  # magic
    "PTH",
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
