[metadata]
name = ocdskingfishercolab
version = 0.3.9
author = Open Contracting Partnership
author_email = data@open-contracting.org
license = BSD
description = A set of utility functions for Google Colaboratory notebooks using OCDS data
url = https://github.com/open-contracting/kingfisher-colab
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    flattentool
    google-auth
    gspread
    gspread-dataframe
    httplib2
    ipython
    ipython-sql~=0.4.0
    notebook
    oauth2client
    pydrive2
    requests
    sqlalchemy

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
test =
    coveralls
    pytest
    pytest-cov
    pandas
    psycopg2-binary
docs =
    furo
    sphinx
    sphinx-autobuild
